header nav alignment fixes

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -48,11 +48,13 @@ header {
   .utility-section {
     background-color: #f5f5f5;
     border-bottom: 1px solid var(--color-gray-200);
+    height: var(--utility-bar-height);
 
     .default-content {
-      max-width: initial;
-      margin: 0;
-      padding: 8px 48px;
+      max-width: 1480px;
+      margin: 0 auto;
+      padding: 0 48px;
+      height: var(--utility-bar-height);
       display: flex;
       justify-content: flex-end;
       align-items: center;
